force-app/main/default/objects/Haravan_Order_item__c/Haravan_Order_item__c.object-meta.xml
<CustomObject>
    <label>Order Item</label>
    <nameField>
        <displayFormat>OI-{00000000}</displayFormat>
        <label>Order Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>