force-app/main/default/objects/Haravan_Order_item__c/fields/Haravan_Order__c.field-meta.xml
<CustomField>
    <fullName>Haravan_Order__c</fullName>
    <label>Haravan Order</label>
    <referenceTo>Haravan_Order__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Haravan_Order_and_Product_Variant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>