force-app/main/default/objects/Haravan_Order_item__c/fields/parentproduct__c.field-meta.xml
<CustomField>
    <fullName>parentproduct__c</fullName>
    <formula>product__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product</label>
    <type>Text</type>
</CustomField>