force-app/main/default/objects/Haravan_Order_item__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>HaravanProductVariant__c</referenceTo>
    <relationshipName>Haravan_Order_and_Product_Variant</relationshipName>
    <type>Lookup</type>
</CustomField>