force-app/main/default/objects/Haravan_Order_item__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>