force-app/main/default/objects/Haravan_Order_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>product__c</columns>
    <columns>Haravan_Order__c</columns>
    <columns>Discount__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Payment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>